--- a/_sass/_styles.scss
+++ b/_sass/_styles.scss
@@ -13,7 +13,13 @@
 
   .card {
     @include fix-screen($on-palm) {
-      height: 420px;
+      height: 425px;
+    }
+
+    .inner {
+      @include media-query($on-palm) {
+        padding: 30px 0;
+      }
     }
 
     p {
@@ -23,7 +29,6 @@
       }
 
       @include fix-screen($on-palm) {
-        max-width: 90%;
         margin: 0 auto;
       }
     }
